Support char
